<resources>
    <string name="app_name">A7la Tripa</string>

    <string name="facebook_app_id">165615514238114</string>
    <string name="fb_login_protocol_scheme">fb165615514238114</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="Login">Login</string>
    <string name="signUp">if u haven\'t account plz create account</string>
    <string name="or">Or Login With</string>
    <string name="btnSignUp">Sign Up</string>
    <string name="txtLogin">i allreay have account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <!--<string name="hello_blank_fragment">Hello blank fragment</string>-->
    <string name="moreCharError">plz ur character from 6 to more</string>
    <string name="emptyError">plz enter ur name</string>
    <string name="emailError">enter valid email</string>
    <string name="emptyEmailError">plz enter ur email</string>
    <string name="emptyNameError">plz enter ur name</string>
    <string name="emptyPassError">enter ur password</string>
    <string name="passMatchError">password don\'t match</string>
    <string name="profileImgError">plz choes ur photo</string>
    <string name="loginError">this acount not found</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signUpError">ur email allready in</string>
    <string name="title_activity_reminder">ReminderActivity</string>
    <string name="start">Start</string>
    <string name="later">Later</string>
    <string name="cancel">Cancel</string>
    <string name="startPoint">Start Point :</string>
    <string name="endPoint">End Point :</string>
    <string name="time">Time :</string>
    <string name="home">Home</string>
    <string name="createTtip">Create Trip</string>
    <string name="detailsTrip">Trip Details</string>
    <string name="PastTrip">Past Trip</string>
    <string name="upcomingTrip">Upcoming Trip</string>
    <string name="editTrip">Edit Trip</string>
    <string name="pastTrip">History</string>

    <string name="saveBtn">Save</string>
    <string name="profile">Profile</string>

    <string name="intro2">Navigation Map to guide you</string>
    <string name="intro4">Show floating ur note</string>
    <string name="intro3">Edit ur Trip and Profile</string>
    <string name="intro1">View ur history trips</string>


</resources>
