<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="project.iti.UI.SignUp.SignUpActivity">


    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:src="@drawable/profile"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        app:civ_border_width="5dp"
        app:civ_border_color="#FF000000"/>

    <TextView
        android:layout_gravity="center"
        android:id="@+id/tvImgError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profileImgError"
        android:visibility="gone"
        android:textColor="@android:color/holo_red_light"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etName"
        android:hint="Name"
        app:met_iconLeft="@drawable/name"
        android:textSize="20sp"
        android:layout_marginRight="@dimen/bottom_text_size"
        android:layout_marginLeft="@dimen/bottom_text_size"
        android:paddingLeft="@dimen/bottom_text_size"
        app:met_baseColor="@color/cardview_shadow_end_color"
        app:met_floatingLabel="highlight"
        app:met_maxCharacters="30"
        android:inputType="text"
        app:met_primaryColor="?colorAccent"
        app:met_singleLineEllipsis="true" />
    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etEmail"
        android:hint="Email"
        app:met_iconLeft="@drawable/email"
        android:textSize="20sp"
        android:layout_marginRight="@dimen/bottom_text_size"
        android:layout_marginLeft="@dimen/bottom_text_size"
        android:paddingLeft="@dimen/bottom_text_size"
        app:met_baseColor="@color/cardview_shadow_end_color"
        app:met_floatingLabel="highlight"
        app:met_maxCharacters="30"
        android:inputType="textWebEmailAddress"
        app:met_primaryColor="?colorAccent"
        app:met_singleLineEllipsis="true" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etPass"
        android:hint="Password"
        app:met_iconLeft="@drawable/pass"
        android:textSize="20sp"
        android:layout_marginRight="@dimen/bottom_text_size"
        android:layout_marginLeft="@dimen/bottom_text_size"
        android:paddingLeft="@dimen/bottom_text_size"
        app:met_baseColor="@color/cardview_shadow_end_color"
        app:met_floatingLabel="highlight"
        app:met_maxCharacters="30"
        android:inputType="textPassword"
        app:met_primaryColor="?colorAccent"
        app:met_singleLineEllipsis="true" />


    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etRePass"
        android:hint="RePassword"
        app:met_iconLeft="@drawable/pass"
        android:textSize="20sp"
        android:layout_marginRight="@dimen/bottom_text_size"
        android:layout_marginLeft="@dimen/bottom_text_size"
        android:paddingLeft="@dimen/bottom_text_size"
        app:met_baseColor="@color/cardview_shadow_end_color"
        app:met_floatingLabel="highlight"
        app:met_maxCharacters="30"
        android:inputType="textPassword"
        app:met_primaryColor="?colorAccent"
        app:met_singleLineEllipsis="true" />
    <TextView
        android:layout_gravity="center"
        android:id="@+id/tvError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signUpError"
        android:visibility="gone"
        android:textColor="@android:color/holo_red_light"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/btnSignUp"
        android:text="@string/btnSignUp"
        android:textSize="@dimen/activity_vertical_margin"
        android:textColor="#cccccc"
        android:background="#32384d"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvLogin"
        android:layout_gravity="center"
        android:textSize="@dimen/activity_vertical_margin"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:text="@string/txtLogin"/>

    <!--<de.hdodenhof.circleimageview.CircleImageView-->
        <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
        <!--android:id="@+id/profile_image"-->
        <!--android:layout_width="100dp"-->
        <!--android:layout_height="100dp"-->
        <!--android:layout_gravity="center"-->
        <!--android:src="@drawable/profile"-->
        <!--android:layout_marginTop="@dimen/activity_vertical_margin"-->
        <!--android:layout_marginBottom="@dimen/activity_vertical_margin"-->
        <!--app:civ_border_width="5dp"-->
        <!--app:civ_border_color="#FF000000"/>-->
</LinearLayout>
</ScrollView>