<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#32384d"
    android:scaleType="centerCrop"
    tools:context="project.iti.UI.Reminder.ReminderActivity"
    tools:layout_editor_absoluteX="16dp"
    tools:layout_editor_absoluteY="16dp">

    <TextView
        android:id="@+id/tripName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_toEndOf="@+id/startPoint"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/tripImg"
        app:layout_constraintStart_toStartOf="@+id/tripImg"
        app:layout_constraintTop_toBottomOf="@+id/tripImg"
        tools:text="gfgfgfg" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView11"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_toStartOf="@+id/tripImg"
        android:text="@string/startPoint"
        android:textAlignment="textStart"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/startPoint"
        app:layout_constraintEnd_toStartOf="@+id/tripName"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tripName" />

    <TextView
        android:id="@+id/startPoint"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:layout_alignBottom="@+id/textView7"
        android:layout_alignStart="@+id/button7"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="48dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tripName"
        app:layout_constraintTop_toBottomOf="@+id/tripName"
        tools:text="@string/start" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView13"
        android:layout_alignStart="@+id/textView7"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/endPoint"
        android:textAlignment="textStart"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/endPoint"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/endPoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView11"
        android:layout_alignStart="@+id/startPoint"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/startPoint"
        app:layout_constraintStart_toStartOf="@+id/startPoint"
        app:layout_constraintTop_toBottomOf="@+id/startPoint"
        tools:text="end" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button7"
        android:layout_alignStart="@+id/textView11"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/time"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/time"
        app:layout_constraintEnd_toEndOf="@+id/textView11"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView13"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@+id/textView13"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/endPoint"
        app:layout_constraintStart_toStartOf="@+id/endPoint"
        app:layout_constraintTop_toBottomOf="@+id/endPoint"
        tools:text="time" />

    <Button
        android:id="@+id/startTrip"
        android:layout_width="80dp"
        android:layout_height="44dp"
        android:layout_alignEnd="@+id/textView11"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:background="#cccccc"
        android:text="@string/start"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBaseline_toBaselineOf="@+id/button7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView13"
        app:layout_constraintHorizontal_bias="0.57"
        app:layout_constraintStart_toStartOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button8"
        android:layout_width="80dp"
        android:layout_height="44dp"
        android:layout_alignBaseline="@+id/button7"
        android:layout_alignBottom="@+id/button7"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="80dp"
        android:background="#cccccc"
        android:onClick="cancel"
        android:text="@string/cancel"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/time"
        app:layout_constraintVertical_bias="0.51" />

    <!--<ImageView-->
    <!--android:id="@+id/tripImg"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_above="@+id/textView7"-->
    <!--android:layout_centerHorizontal="true"-->
    <!--android:layout_marginBottom="48dp"-->
    <!--android:adjustViewBounds="false"-->
    <!--android:scaleType="center"-->
    <!--app:srcCompat="@mipmap/ic_launcher_round" />-->

    <Button
        android:id="@+id/button7"
        android:layout_width="80dp"
        android:layout_height="44dp"
        android:layout_alignBaseline="@+id/startTrip"
        android:layout_alignBottom="@+id/startTrip"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:width="10dp"
        android:background="#cccccc"
        android:onClick="later"
        android:text="@string/later"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBaseline_toBaselineOf="@+id/button8"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toEndOf="@+id/startTrip"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/tripImg"
        android:layout_width="134dp"
        android:layout_height="114dp"
        android:layout_above="@+id/tripName"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/profile"
        app:civ_border_color="#FF000000"
        app:civ_border_width="3dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView7"
        app:layout_constraintStart_toStartOf="@+id/imageView7"
        app:layout_constraintTop_toBottomOf="@+id/imageView7" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="127dp"
        android:layout_height="66dp"
        android:layout_alignEnd="@+id/button8"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView7"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/route" />

</android.support.constraint.ConstraintLayout>
